--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost/postgres
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost/applications
 spring.datasource.username=postgres
-spring.datasource.password=user
-spring.jpa.generate-ddl=false
+spring.datasource.password=postgres-d
+spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
