--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=8080
-
 spring.datasource.url=jdbc:postgresql://localhost/applications
 spring.datasource.username=postgres
-spring.datasource.password=postgres-d
+spring.datasource.password=user
 spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=false
